fixed the issue with the vh height that caused issues on the landscape view on mobile devices

--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 
 :root {
   --max-width: 1400px;
-  --gray-bg: rgba(0, 0, 0, 0.5);
+  --gray-bg: rgba(0, 0, 0, 0.6);
 }
 
 @theme {
